--- a/qt-homeworks/08/task1/mainwindow.ui
+++ b/qt-homeworks/08/task1/mainwindow.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>Домашнее задание к занятию: Работа с БД</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/database1.ico</normaloff>:/database1.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="3" column="1">
@@ -153,6 +157,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
